--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.1",
+    "element-ui": "^2.15.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.3",
     "vuex": "^3.6.0"
